FIX: Add working with posts logic
